--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,7 @@
             <p>Completed tasks: <span id="completed-tasks">0</span></p>
             <p>Starred tasks: <span id="starred-tasks">0</span></p>
         </div>
+        <button id="go-to-task-list">Go to Task List</button>
     </div>
     <script src="scripts-dashboard.js"></script>
 </body>
