--- a/task-list.html
+++ b/task-list.html
@@ -11,12 +11,13 @@
         <h1>Task List</h1>
         <form id="task-form">
             <input type="text" id="task-name" placeholder="Task name" required>
-            <textarea id="task-description" placeholder="Task description" rows="3" required></textarea>
+            <input type="text" id="task-description" placeholder="Task description" required>
             <button type="submit">Add Task</button>
         </form>
         <ul id="task-list">
             <!-- Task list items will be added here -->
         </ul>
+        <button id="go-to-dashboard">Go to Dashboard</button>
     </div>
     <script src="scripts-task-list.js"></script>
 </body>
