--- a/task-list.html
+++ b/task-list.html
@@ -7,6 +7,8 @@
     <title>Task List</title>
 </head>
 <body>
+    <script src="scripts.js"></script>
+
     <div class="container">
         <h1>Task List</h1>
         <form id="task-form">
