--- a/task-list.html
+++ b/task-list.html
@@ -22,5 +22,7 @@
         <button id="go-to-dashboard">Go to Dashboard</button>
     </div>
     <script src="scripts-task-list.js"></script>
+    <button id="go-to-dashboard">Go to Dashboard</button>
+
 </body>
 </html>
