--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <script src="scripts.js"></script>
+    <button id="go-to-task-list">Go to Task List</button>
+
 
     <div class="container">
         <h1>Dashboard</h1>
