--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,8 @@
     <title>Dashboard</title>
 </head>
 <body>
+    <script src="navigation.js"></script>
+
     <script src="scripts.js"></script>
     <button id="go-to-task-list">Go to Task List</button>
 
