--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,7 @@
     <title>Dashboard</title>
 </head>
 <body>
+    <script src="scripts-dashboard.js"></script>
     <div class="container">
         <h1>Dashboard</h1>
         <div class="stats">
