--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Task List</h1>
+        <h1>Welcome to QuickTask!</h1>
         <button id="go-to-task-list">Go to Task List</button>
         <button id="go-to-dashboard">Go to Dashboard</button>
     </div>
