--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <h1>Welcome to QuickTask!</h1>
-        <button id="go-to-task-list">Go to Task List</button>
-        <button id="go-to-dashboard">Go to Dashboard</button>
+        <button id="go-to-task-list">Go to your Task List</button>
+        <button id="go-to-dashboard">Go to your Dashboard</button>
     </div>
     <script src="scripts.js"></script>
 </body>
