--- a/task-list.html
+++ b/task-list.html
@@ -11,8 +11,8 @@
     <div class="container">
         <h1>Task List</h1>
         <form id="task-form">
-            <input type="text" id="task-name" placeholder="Task name" required>
-            <input type="text" id="task-description" placeholder="Task description" required>
+            <input type="text" id="task-name" placeholder="Name your Task" required>
+            <input type="text" id="task-description" placeholder="Describe your Task" required>
             <button type="submit">Add Task</button>
         </form>
         <ul id="task-list">
