--- a/task-list.html
+++ b/task-list.html
@@ -19,6 +19,9 @@
             <!-- Task list items will be added here -->
         </ul>
         <button id="go-to-dashboard">Go to Dashboard</button>
+        <button id="go-to-dashboard" class="nav-button">Go to Dashboard</button>
+
+
     </div>
     <script src="scripts-task-list.js"></script>
     <script src="navigation.js"></script>
