--- a/task-list.html
+++ b/task-list.html
@@ -9,6 +9,8 @@
 <body>
     <script src="scripts-dashboard.js"></script>
     <div class="container">
+        <button type="submit" class="add-task-button">Add Task</button>
+
         <h1>Task List</h1>
         <form id="task-form">
             <input type="text" id="task-name" placeholder="Name your Task" required>
